# sgx-membench

./: README.md
sgx-membench/: Cargo.toml
sgx-membench-enclave/: Cargo.toml  build.sh
sgx-membench-enclave/src/: enclave_logger.rs  lib.rs
sgx-membench/src/: bench.rs  lib.rs  logger.rs  main.rs
