[package]
name = "sgx-membench-enclave"
version = "0.1.0"
authors = ["Peter Pietzuch <prp@imperial.ac.uk>"]

[lib]
crate-type = ["dylib"]

[features]
#enclave_debug = ["enclave/debug"]

[dependencies]
sgx-isa = "0.1.0"
enclave = {version = "=0.1.3", features = ["allocator"] } # was: debug
#rustls = { git = "https://github.com/ctz/rustls.git" }
sgx-membench = { path = "../sgx-membench/" }
core_io = { version = "0.1", features = ["alloc","collections"] }
